--- a/portfolio.html
+++ b/portfolio.html
@@ -52,7 +52,7 @@
       </div>
     </header>
     <main>
-      <section class="portfolio-box">
+      <section class="section portfolio-box">
         <div class="container">
           <h1 class="hidden-title">Портфолио</h1>
           <ul class="filters-list list">
@@ -77,7 +77,7 @@
           <ul class="project-list list">
             <li class="project-card">
               <div class="card-thumb">
-                <img src="./images/img1.png" alt="дизайн сайта" />
+                <img src="./images/proj1.jpg" alt="дизайн сайта" />
               </div>
               <div class="project-card-content">
                 <h2 class="title">Технокряк</h2>
@@ -86,7 +86,7 @@
             </li>
             <li class="project-card">
               <div class="card-thumb">
-                <img src="./images/img2.png" alt="дизайн постера" />
+                <img src="./images/proj2.jpg" alt="дизайн постера" />
               </div>
               <div class="project-card-content">
                 <h2 class="title">Постер New Orlean vs Golden Star</h2>
@@ -96,7 +96,7 @@
             <li class="project-card">
               <div class="card-thumb">
                 <img
-                  src="./images/img3.png"
+                  src="./images/proj3.jpg"
                   alt="Приложение для ресторана"
                   width="370"
                 />
@@ -108,7 +108,7 @@
             </li>
             <li class="project-card">
               <div class="card-thumb">
-                <img src="./images/img4.png" alt="наушники" />
+                <img src="./images/proj4.jpg" alt="наушники" />
               </div>
               <div class="project-card-content">
                 <h2 class="title">Проект Prime</h2>
@@ -118,7 +118,7 @@
             <li class="project-card">
               <div class="card-thumb">
                 <img
-                  src="./images/img5.png"
+                  src="./images/proj5.jpg"
                   alt="две картонные коробки"
                   width="370"
                 />
@@ -130,7 +130,7 @@
             </li>
             <li class="project-card">
               <div class="card-thumb">
-                <img src="./images/img6.png" alt="монитор" />
+                <img src="./images/proj6.jpg" alt="монитор" />
               </div>
               <div class="project-card-content">
                 <h2 class="title">Inspiration has no Borders</h2>
@@ -139,7 +139,7 @@
             </li>
             <li class="project-card">
               <div class="card-thumb">
-                <img src="./images/img7.png" alt="открытый журнал" />
+                <img src="./images/proj7.jpg" alt="открытый журнал" />
               </div>
               <div class="project-card-content">
                 <h2 class="title">Издание Limited Edition</h2>
@@ -148,7 +148,7 @@
             </li>
             <li class="project-card">
               <div class="card-thumb">
-                <img src="./images/img8.png" alt="бирка" />
+                <img src="./images/proj8.jpg" alt="бирка" />
               </div>
               <div class="project-card-content">
                 <h2 class="title">Проект LAB</h2>
@@ -157,7 +157,7 @@
             </li>
             <li class="project-card">
               <div class="card-thumb">
-                <img src="./images/img9.png" alt="ноутбук" />
+                <img src="./images/proj9.jpg" alt="ноутбук" />
               </div>
               <div class="project-card-content">
                 <h2 class="title">Growing Business</h2>
@@ -168,31 +168,68 @@
         </div>
       </section>
     </main>
-    <footer class="footer-page" id="contact">
-      <div class="footer-box container">
-        <a href="./" class="logo-link"><span>Web</span>Studio</a>
-        <!-- список контактов (подвал) -->
-        <address>
-          <!-- Ссылка на гуглкарту -->
-          <ul class="list address-list">
-            <li class="item">
-              <a
-                class="address-link link"
-                href="https://goo.gl/maps/zS1xnshHH64RWqHC6"
-                target="_blank"
-                >г. Киев, пр-т Леси Украинки, 26</a
-              >
+    <footer class="section footer-page" id="contact">
+      <div class="container footer-box">
+        <div class="contacts">
+          <a href="./" class="logo-link"><span>Web</span>Studio</a>
+          <!-- список контактов (подвал) -->
+          <address>
+            <!-- Ссылка на гуглкарту -->
+            <ul class="list address-list">
+              <li class="item">
+                <a
+                  class="address-link link"
+                  href="https://goo.gl/maps/zS1xnshHH64RWqHC6"
+                  target="_blank"
+                  >г. Киев, пр-т Леси Украинки, 26</a
+                >
+              </li>
+
+              <li class="item">
+                <a class="link footer-link" href="mailto:">info@example.com</a>
+              </li>
+
+              <li class="item">
+                <a class="link footer-link" href="tel:+380991111111"
+                  >+38 099 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+
+        <div class="footer-social">
+          <h3 class="title">Присоединяйтесь</h3>
+          <ul class="list team-social-list">
+            <li>
+              <a class="link social-link" href="#"
+                ><svg class="footer-social-icon" width="20" height="20">
+                  <use href="./images/sprite.svg#icon-instagram" /></svg
+              ></a>
             </li>
-            <li class="item">
-              <a class="link footer-link" href="mailto:">info@example.com</a>
+
+            <li>
+              <a class="link social-link" href="#"
+                ><svg class="footer-social-icon" width="20" height="20">
+                  <use href="./images/sprite.svg#icon-twitter" /></svg
+              ></a>
             </li>
-            <li class="item">
-              <a class="link footer-link" href="tel:+380991111111"
-                >+38 099 111 11 11</a
-              >
+
+            <li>
+              <a class="link social-link" href="#"
+                ><svg class="footer-social-icon" width="20" height="20">
+                  <use href="./images/sprite.svg#icon-facebook" /></svg
+              ></a>
+            </li>
+
+            <li>
+              <a class="link social-link" href="#"
+                ><svg class="footer-social-icon" width="20" height="20">
+                  <use href="./images/sprite.svg#icon-linkedin" /></svg
+              ></a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
