оврелей добавил в героя

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </header>
     <main>
       <!-- Секция Hero -->
-      <section class="section hero-box">
+      <section class="section hero-box overlay">
         <div class="container">
           <h1 class="title">Эффективные решения для вашего бизнеса</h1>
           <button class="btn hero-btn active" type="button">
