Переименовал спрайт, согласно ТЗ

--- a/portfolio.html
+++ b/portfolio.html
@@ -204,28 +204,28 @@
             <li>
               <a class="link social-link" href="#"
                 ><svg class="footer-social-icon" width="20" height="20">
-                  <use href="./images/sprite.svg#icon-instagram" /></svg
+                  <use href="./images/icons.svg#icon-instagram" /></svg
               ></a>
             </li>
 
             <li>
               <a class="link social-link" href="#"
                 ><svg class="footer-social-icon" width="20" height="20">
-                  <use href="./images/sprite.svg#icon-twitter" /></svg
+                  <use href="./images/icons.svg#icon-twitter" /></svg
               ></a>
             </li>
 
             <li>
               <a class="link social-link" href="#"
                 ><svg class="footer-social-icon" width="20" height="20">
-                  <use href="./images/sprite.svg#icon-facebook" /></svg
+                  <use href="./images/icons.svg#icon-facebook" /></svg
               ></a>
             </li>
 
             <li>
               <a class="link social-link" href="#"
                 ><svg class="footer-social-icon" width="20" height="20">
-                  <use href="./images/sprite.svg#icon-linkedin" /></svg
+                  <use href="./images/icons.svg#icon-linkedin" /></svg
               ></a>
             </li>
           </ul>
