--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
           <li class="item contact-item">
             <a class="link envelope-link" href="mailto:info@devstudio.com"
               ><svg class="icon" width="16" height="12">
-                <use href="./images/sprite.svg#icon-envelope"></use></svg
+                <use href="./images/icons.svg#icon-envelope"></use></svg
               >info@devstudio.com</a
             >
           </li>
           <li class="item contact-item">
             <a class="link tel-link" href="tel:+380961111111"
               ><svg class="icon" width="10" height="16">
-                <use href="./images/sprite.svg#icon-smartphone" />
+                <use href="./images/icons.svg#icon-smartphone" />
               </svg>
               +38 096 111 11 11</a
             >
@@ -76,7 +76,7 @@
               <div class="features-content">
                 <div class="features-icon-box">
                   <svg class="icon-features" width="70" height="70">
-                    <use href="./images/sprite.svg#icon-antenna" />
+                    <use href="./images/icons.svg#icon-antenna" />
                   </svg>
                 </div>
                 <h3 class="title">Внимание к деталям</h3>
@@ -91,7 +91,7 @@
               <div class="features-content">
                 <div class="features-icon-box">
                   <svg class="icon-features" width="70" height="70">
-                    <use href="./images/sprite.svg#icon-clock" />
+                    <use href="./images/icons.svg#icon-clock" />
                   </svg>
                 </div>
                 <h3 class="title">Пунктуальность</h3>
@@ -106,7 +106,7 @@
               <div class="features-content">
                 <div class="features-icon-box">
                   <svg class="icon-features" width="70" height="70">
-                    <use href="./images/sprite.svg#icon-diagram" />
+                    <use href="./images/icons.svg#icon-diagram" />
                   </svg>
                 </div>
                 <h3 class="title">Планирование</h3>
@@ -121,7 +121,7 @@
               <div class="features-content">
                 <div class="features-icon-box">
                   <svg class="icon-features" width="70" height="70">
-                    <use href="./images/sprite.svg#icon-astronaut" />
+                    <use href="./images/icons.svg#icon-astronaut" />
                   </svg>
                 </div>
                 <h3 class="title">Современные технологии</h3>
@@ -197,28 +197,28 @@
                   <li>
                     <a class="link social-link team-social-link" href="#"
                       ><svg class="social-icon-team" width="20" height="20">
-                        <use href="./images/sprite.svg#icon-instagram" /></svg
+                        <use href="./images/icons.svg#icon-instagram" /></svg
                     ></a>
                   </li>
 
                   <li>
                     <a class="link social-link team-social-link" href="#"
                       ><svg class="social-icon-team" width="20" height="20">
-                        <use href="./images/sprite.svg#icon-twitter" /></svg
+                        <use href="./images/icons.svg#icon-twitter" /></svg
                     ></a>
                   </li>
 
                   <li>
                     <a class="link social-link team-social-link" href="#"
                       ><svg class="social-icon-team" width="20" height="20">
-                        <use href="./images/sprite.svg#icon-facebook" /></svg
+                        <use href="./images/icons.svg#icon-facebook" /></svg
                     ></a>
                   </li>
 
                   <li>
                     <a class="link social-link team-social-link" href="#"
                       ><svg class="social-icon-team" width="20" height="20">
-                        <use href="./images/sprite.svg#icon-linkedin" /></svg
+                        <use href="./images/icons.svg#icon-linkedin" /></svg
                     ></a>
                   </li>
                 </ul>
@@ -241,28 +241,28 @@
                   <li>
                     <a class="link social-link team-social-link" href="#"
                       ><svg class="social-icon-team" width="20" height="20">
-                        <use href="./images/sprite.svg#icon-instagram" /></svg
+                        <use href="./images/icons.svg#icon-instagram" /></svg
                     ></a>
                   </li>
 
                   <li>
                     <a class="link social-link team-social-link" href="#"
                       ><svg class="social-icon-team" width="20" height="20">
-                        <use href="./images/sprite.svg#icon-twitter" /></svg
+                        <use href="./images/icons.svg#icon-twitter" /></svg
                     ></a>
                   </li>
 
                   <li>
                     <a class="link social-link team-social-link" href="#"
                       ><svg class="social-icon-team" width="20" height="20">
-                        <use href="./images/sprite.svg#icon-facebook" /></svg
+                        <use href="./images/icons.svg#icon-facebook" /></svg
                     ></a>
                   </li>
 
                   <li>
                     <a class="link social-link team-social-link" href="#"
                       ><svg class="social-icon-team" width="20" height="20">
-                        <use href="./images/sprite.svg#icon-linkedin" /></svg
+                        <use href="./images/icons.svg#icon-linkedin" /></svg
                     ></a>
                   </li>
                 </ul>
@@ -285,28 +285,28 @@
                   <li>
                     <a class="link social-link team-social-link" href="#"
                       ><svg class="social-icon-team" width="20" height="20">
-                        <use href="./images/sprite.svg#icon-instagram" /></svg
+                        <use href="./images/icons.svg#icon-instagram" /></svg
                     ></a>
                   </li>
 
                   <li>
                     <a class="link social-link team-social-link" href="#"
                       ><svg class="social-icon-team" width="20" height="20">
-                        <use href="./images/sprite.svg#icon-twitter" /></svg
+                        <use href="./images/icons.svg#icon-twitter" /></svg
                     ></a>
                   </li>
 
                   <li>
                     <a class="link social-link team-social-link" href="#"
                       ><svg class="social-icon-team" width="20" height="20">
-                        <use href="./images/sprite.svg#icon-facebook" /></svg
+                        <use href="./images/icons.svg#icon-facebook" /></svg
                     ></a>
                   </li>
 
                   <li>
                     <a class="link social-link team-social-link" href="#"
                       ><svg class="social-icon-team" width="20" height="20">
-                        <use href="./images/sprite.svg#icon-linkedin" /></svg
+                        <use href="./images/icons.svg#icon-linkedin" /></svg
                     ></a>
                   </li>
                 </ul>
@@ -329,28 +329,28 @@
                   <li>
                     <a class="link social-link team-social-link" href="#"
                       ><svg class="social-icon-team" width="20" height="20">
-                        <use href="./images/sprite.svg#icon-instagram" /></svg
+                        <use href="./images/icons.svg#icon-instagram" /></svg
                     ></a>
                   </li>
 
                   <li>
                     <a class="link social-link team-social-link" href="#"
                       ><svg class="social-icon-team" width="20" height="20">
-                        <use href="./images/sprite.svg#icon-twitter" /></svg
+                        <use href="./images/icons.svg#icon-twitter" /></svg
                     ></a>
                   </li>
 
                   <li>
                     <a class="link social-link team-social-link" href="#"
                       ><svg class="social-icon-team" width="20" height="20">
-                        <use href="./images/sprite.svg#icon-facebook" /></svg
+                        <use href="./images/icons.svg#icon-facebook" /></svg
                     ></a>
                   </li>
 
                   <li>
                     <a class="link social-link team-social-link" href="#"
                       ><svg class="social-icon-team" width="20" height="20">
-                        <use href="./images/sprite.svg#icon-linkedin" /></svg
+                        <use href="./images/icons.svg#icon-linkedin" /></svg
                     ></a>
                   </li>
                 </ul>
@@ -368,42 +368,42 @@
             <li class="item">
               <a class="link client-link" href="#">
                 <svg class="icon-client" width="106" height="60">
-                  <use href="./images/sprite.svg#icon-group1"></use>
+                  <use href="./images/icons.svg#icon-group1"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
               <a class="link client-link" href="#">
                 <svg class="icon-client" width="106" height="60">
-                  <use href="./images/sprite.svg#icon-group2"></use>
+                  <use href="./images/icons.svg#icon-group2"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
               <a class="link client-link" href="#">
                 <svg class="icon-client" width="106" height="60">
-                  <use href="./images/sprite.svg#icon-group3"></use>
+                  <use href="./images/icons.svg#icon-group3"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
               <a class="link client-link" href="#">
                 <svg class="icon-client" width="106" height="60">
-                  <use href="./images/sprite.svg#icon-group4"></use>
+                  <use href="./images/icons.svg#icon-group4"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
               <a class="link client-link" href="#">
                 <svg class="icon-client" width="106" height="60">
-                  <use href="./images/sprite.svg#icon-group5"></use>
+                  <use href="./images/icons.svg#icon-group5"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
               <a class="link client-link" href="#">
                 <svg class="icon-client" width="106" height="60">
-                  <use href="./images/sprite.svg#icon-group6"></use>
+                  <use href="./images/icons.svg#icon-group6"></use>
                 </svg>
               </a>
             </li>
@@ -447,28 +447,28 @@
             <li class="social-list-item">
               <a class="link social-link footer-social-link" href="#"
                 ><svg class="footer-social-icon" width="20" height="20">
-                  <use href="./images/sprite.svg#icon-instagram" /></svg
+                  <use href="./images/icons.svg#icon-instagram" /></svg
               ></a>
             </li>
 
             <li class="social-list-item">
               <a class="link social-link footer-social-link" href="#"
                 ><svg class="footer-social-icon" width="20" height="20">
-                  <use href="./images/sprite.svg#icon-twitter" /></svg
+                  <use href="./images/icons.svg#icon-twitter" /></svg
               ></a>
             </li>
 
             <li class="social-list-item">
               <a class="link social-link footer-social-link" href="#"
                 ><svg class="footer-social-icon" width="20" height="20">
-                  <use href="./images/sprite.svg#icon-facebook" /></svg
+                  <use href="./images/icons.svg#icon-facebook" /></svg
               ></a>
             </li>
 
             <li class="social-list-item">
               <a class="link social-link footer-social-link" href="#"
                 ><svg class="footer-social-icon" width="20" height="20">
-                  <use href="./images/sprite.svg#icon-linkedin" /></svg
+                  <use href="./images/icons.svg#icon-linkedin" /></svg
               ></a>
             </li>
           </ul>
