убрал не задействованные классы в ссылках

--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
         <!-- список контактов -->
         <ul class="contact-list list">
           <li class="item contact-item">
-            <a class="link envelope-link" href="mailto:info@devstudio.com"
+            <a class="link" href="mailto:info@devstudio.com"
               ><svg class="icon" width="16" height="12">
                 <use href="./images/icons.svg#icon-envelope"></use></svg
               >info@devstudio.com</a
             >
           </li>
           <li class="item contact-item">
-            <a class="link tel-link" href="tel:+380961111111"
+            <a class="link" href="tel:+380961111111"
               ><svg class="icon" width="10" height="16">
                 <use href="./images/icons.svg#icon-smartphone" />
               </svg>
